2009-06-25  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (thread_cleanup): move the prototype here ...
	* spvw.d, zthread.d: ... from here

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: handle interrupts when the thread is still not
	entirely initialized
	* spvw.d (handle_pending_interrupts): check *DEFER-INTERRUPTS* for
	SYMVALUE_EMPTY. it's possible to have interrupts while not yet
	initialized with NIL
	* zthread.d (THREAD-INTERRUPT): :OVERRIDE is generalized boolean

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (WITH-DEFERRED-INTERRUPTS): reverse arguments. was broken
	but seemed to be fine since all tests are with single argument

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (THREAD-INTERRUPT): check that :ARGUMENTS is list
	(push_interrupt_arguments): no need to check for missing args

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (THREAD-KILL): remove

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (THREAD-KILL): add :OVERRIDE keyword argument. Allows
	killing a thread even interrupts are deferred in it

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: allow THREAD-INTERRUPT to ignore WITH-DEFERRED-INTERRUPTS
	* zthread.d (THREAD-INTERRUPT): accept :FUNCTION, :OVERRIDE and
	:ARGUMENTS keyword arguments
	(push_interrupt_arguments): helper function to push on foreign thread
	stack required data for THREAD-INTERRUPT implementation
	(THREAD-KILL): remove
	* subr.d, subrkw.d: add :FUNCTION, :OVERRIDE and :ARGUMENTS to
	THREAD-INTERRUPT arguments
	(THREAD-KILL): remove
	* constsym.d: add :OVERRIDE and :FUNCTION symbols
	(THREAD-KILL): remove
	* spvw.d (handle_pending_interrupts): ignore WITH-DEFERRED-INTERRUPTS
	if asked to do so
	(signal_handler_thread): on SIGINT and fatal signals - force interrupt
	* threads.lisp (THREAD-KILL): implement via THREAD-INTERRUPT

2009-06-24  Sam Steingold  <sds@gnu.org>
